Implemented pub sub to avoid constant info pings from clients - OpenAPI bumped to 0.9.0 - client changes: commit 1420693 ; commit 021aca2
